[fix] fix overflow cut

--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,7 @@ h1{
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  width: 100%;
   gap: 1rem;
 }
 
